@@ -11,7 +11,6 @@ my $post_diag;
 
 $modules{$_} = $_ for qw(
   ExtUtils::MakeMaker
-  File::HomeDir
   File::Path
   File::Temp
   Path::Class
